test/parallel/forall/may-vs-must-par/f1-stmt-mustpar-e1-inst1ser.good
f1-stmt-mustpar-e1-inst1ser.chpl:4: error: A standalone or leader iterator is not found for the iterable expression in this forall loop
