test/parallel/forall/may-vs-must-par/f1-stmt-mustpar-e1-inst1ser.chpl
use datas;

// error - parallel instator is not provided
forall IND in inst1ser do
  writeln("forall IND in inst1ser");
